--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Geolocation API</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <meta charset="utf-8" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css" />
 </head>
+
 <body>
-    
+    <!-- Your code here -->
 </body>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=*********&libraries=places">
+</script>
+<script src="app.js"></script>
+
 </html>
