current location fetching is completed

--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <html>
 <head>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <meta charset="utf-8" />
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="app.js"></script>
 </head>
-
 <body>
-    <!-- Your code here -->
+    <input  id="country" disabled style="border: none">
+    <input  id="state" disabled style="border: none">
+    <input  id="city" disabled style="border: none">
 </body>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=*********&libraries=places">
-</script>
-<script src="app.js"></script>
-
 </html>
